# mlops-assignment-e2e-ml-pipeline

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yaml  mlflow.db  pyproject.toml  requirements-airflow.txt  run-docker-compose.sh
config/: litellm_model_registry.json
dags/: evaluate_agent.py  mini-swe-bench-single.py
docker/airflow/: Dockerfile
mlartifacts/1/6368bc815bce4e28af895cfd8aaa5004/artifacts/: metrics.json
mlartifacts/1/9565fd3c754a43c49e92ffe4103212d5/artifacts/: metrics.json
pipeline/: __init__.py  docker_entry.py  run_steps.py
sample/: nebius__moonshotai__Kimi-K2.6.test.json
sample/logs/run_evaluation/test/nebius__moonshotai__Kimi-K2.6/astropy__astropy-12907/: eval.sh  patch.diff  report.json  test_output.txt
sample/logs/run_evaluation/test/nebius__moonshotai__Kimi-K2.6/astropy__astropy-13033/: eval.sh  patch.diff  report.json  test_output.txt
sample/logs/run_evaluation/test/nebius__moonshotai__Kimi-K2.6/astropy__astropy-13236/: eval.sh  patch.diff  report.json  test_output.txt
sample/run_manifest/: config.json  manifest.json  metrics.json
sample/trajectories/: exit_statuses_1781553463.5504148.yaml  exit_statuses_1781556316.6531544.yaml  preds.json
sample/trajectories/astropy__astropy-12907/: astropy__astropy-12907.traj.json
sample/trajectories/astropy__astropy-13033/: astropy__astropy-13033.traj.json
sample/trajectories/astropy__astropy-13236/: astropy__astropy-13236.traj.json
scripts/: build-pipeline-image.sh  docker-run-agent.sh  docker-run-eval.sh
